add style for header and update style for footer

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <!-- =========================================== -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css'>
     <link rel='stylesheet' href='./assets/style/main.css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
     <!-- Meta -->
     <!-- =========================================== -->
